# volforecast

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/decisions/: 0001-fit-on-train-only.md  0002-forward-rv-target-gap.md  0003-garch-arch-parity.md  0004-honest-garch-hard-to-beat.md  0005-lstm-research-only-no-tf-container.md
src/volforecast/: __init__.py  _constants.py  _exceptions.py  _manifest.py  _typing.py  _validation.py  baselines.py  cli.py  data.py  pipeline.py  plots.py
src/volforecast/backtest/: __init__.py  costs.py  overlay.py
src/volforecast/evaluation/: __init__.py  dsr.py  qlike.py  tests.py  verdict.py
src/volforecast/features/: __init__.py  har.py
src/volforecast/garch/: __init__.py  models.py
src/volforecast/ml/: __init__.py  lstm.py  xgb.py
src/volforecast/realized/: __init__.py  estimators.py
src/volforecast/walkforward/: __init__.py  engine.py
tests/: conftest.py
tests/integration/: __init__.py  test_end_to_end.py  test_lstm_research_only.py
tests/parity/: __init__.py  test_garch_models.py  test_parity_garch_oracle.py
tests/property/: __init__.py  test_invariants.py  test_realized_estimators.py  test_walkforward_data.py
tests/regression/: __init__.py  test_honest_null.py
tests/unit/: __init__.py  test_evaluation.py  test_evaluation_dsr.py  test_fixtures_and_stubs.py  test_import_purity.py  test_infra.py  test_ml_baselines_har.py  test_overlay.py  test_pipeline.py  test_plots_and_cli.py  test_validation.py
